--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="vehicle_name_hint">Enter vehicle name</string>
+    <string name="vehicle_miles_hint">Enter miles on odometer</string>
+    <string name="vehicle_gallons_hint">Enter fuel tank gallons</string>
+    <string name="title_activity_check_miles">CheckMilesActivity</string>
 </resources>
