--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="text_check_miles">Check Mileage</string>
     <string name="text_fill_up">Fill Up</string>
     <string name="text_update_vehicle">Update Vehicle</string>
+    <string name="title_activity_fill_up">FillUpActivity</string>
 </resources>
